--- a/style.css
+++ b/style.css
@@ -75,15 +75,15 @@ main {
     background-image: url("slug_red_stripped.png");
 }
 
-.change_animal {
+.chng_animal {
     background-image: url("change_animal.png");
 }
 
-.change_color {
+.chng_color {
     background-image: url("change_color.png");
 }
 
-.change_pattern {
+.chng_pattern {
     background-image: url("change_pattern.png");
 }
 
