játék működik, új pálya még nem tökéletes

--- a/style.css
+++ b/style.css
@@ -95,6 +95,14 @@ main {
     cursor: pointer;
 }
 
+#rolledMonster {
+    width: 150px;
+}
+
+button {
+    cursor: pointer;
+}
+
 
 /* .end-row {
     display: flex;
